@@ -1,1 +1,2 @@
 com.twitter.finagle.stats.MetricsExporter
+com.twitter.finagle.stats.HostMetricsExporter
